<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.yk.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3f2fd"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.register.UserRegisterActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="96dp"
            android:src="@drawable/ic_person_ph"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:imageSource="@{viewModel.userObservable.photoUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/ic_menu_add"
            app:civ_circle_background_color="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@id/userImage"
            app:layout_constraintCircle="@id/userImage"
            app:layout_constraintCircleAngle="135"
            app:layout_constraintCircleRadius="48dp"
            app:layout_constraintEnd_toEndOf="@id/userImage" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:enabled="false"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:text="@{viewModel.userObservable.mail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userImage" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/prompt_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@{viewModel.userObservable.name}"
            app:layout_constraintEnd_toStartOf="@id/surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/prompt_surname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@{viewModel.userObservable.surname}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:enabled="true"
            android:text="@string/action_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:enabled="true"
            android:text="@string/action_delete_account"
            app:layout_constraintBottom_toTopOf="@id/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>